{
  "version": 4,
  "terraform_version": "1.13.0",
  "serial": 145,
  "lineage": "4e202b12-4240-b399-2586-f03b3e81b255",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "grupo4_ec2_az1a_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0360c520857e3138f",
            "arn": "arn:aws:ec2:us-east-1:376339220136:instance/i-0742b3f2648ad1f97",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-02f5ddce90bfbd52e",
                "volume_size": 24,
                "volume_type": "gp3"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0742b3f2648ad1f97",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "grupo4-key-db",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f794a2d9bd4b9865",
            "private_dns": "ip-10-1-0-37.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.0.37",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-02f5ddce90bfbd52e",
                "volume_size": 24,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ae1cb6fd8c6d98b4",
            "tags": {
              "Name": "grupo4-ec2-az1a-db"
            },
            "tags_all": {
              "Name": "grupo4-ec2-az1a-db"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03723b006673f2d8a",
              "sg-0397f14125bf61ed9"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.grupo4_key_db",
            "aws_security_group.grupo4_sg_mysql",
            "aws_security_group.grupo4_sg_remote",
            "aws_subnet.grupo4_subnet_az1a_pri",
            "aws_vpc.grupo4_vpc",
            "tls_private_key.grupo4_key_db"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "grupo4_ec2_az1a_pri_0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0360c520857e3138f",
            "arn": "arn:aws:ec2:us-east-1:376339220136:instance/i-02ac3be6f6df892e2",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-046e528f4b524d993",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02ac3be6f6df892e2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "grupo4-key-pri",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01109ecb28846b4ae",
            "private_dns": "ip-10-1-0-45.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.0.45",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-046e528f4b524d993",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ae1cb6fd8c6d98b4",
            "tags": {
              "Name": "grupo4-ec2-az1a-pri-0"
            },
            "tags_all": {
              "Name": "grupo4-ec2-az1a-pri-0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0397f14125bf61ed9",
              "sg-0e3e2a1a3fb4aeb73"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.grupo4_key_pri",
            "aws_security_group.grupo4_sg_remote",
            "aws_security_group.grupo4_sg_web",
            "aws_subnet.grupo4_subnet_az1a_pri",
            "aws_vpc.grupo4_vpc",
            "tls_private_key.grupo4_key_pri"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "grupo4_ec2_az1a_pub_0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0360c520857e3138f",
            "arn": "arn:aws:ec2:us-east-1:376339220136:instance/i-05fc0ba6fbe466f9a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-072ef149e07d2233d",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05fc0ba6fbe466f9a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "grupo4-key-pub",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-041eadf8155e8f899",
            "private_dns": "ip-10-1-0-10.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.0.10",
            "public_dns": "ec2-3-84-7-119.compute-1.amazonaws.com",
            "public_ip": "3.84.7.119",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-072ef149e07d2233d",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0846b69b1d175ae65",
            "tags": {
              "Name": "grupo4-ec2-az1a-pub-0"
            },
            "tags_all": {
              "Name": "grupo4-ec2-az1a-pub-0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-034a2c42cfff5b830",
              "sg-0397f14125bf61ed9",
              "sg-0e3e2a1a3fb4aeb73"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.grupo4_key_pub",
            "aws_security_group.grupo4_sg_efs",
            "aws_security_group.grupo4_sg_remote",
            "aws_security_group.grupo4_sg_web",
            "aws_subnet.grupo4_subnet_az1a_pub",
            "aws_vpc.grupo4_vpc",
            "tls_private_key.grupo4_key_pub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "grupo4_ec2_az1b_pub_0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0360c520857e3138f",
            "arn": "arn:aws:ec2:us-east-1:376339220136:instance/i-0f51921a52d9725b9",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-02f88883a99a7186f",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f51921a52d9725b9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "grupo4-key-pub",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e7833e4a95bc2b08",
            "private_dns": "ip-10-1-0-30.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.0.30",
            "public_dns": "ec2-54-91-200-213.compute-1.amazonaws.com",
            "public_ip": "54.91.200.213",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-02f88883a99a7186f",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0afa529d816959abe",
            "tags": {
              "Name": "grupo4-ec2-az1b-pub-0"
            },
            "tags_all": {
              "Name": "grupo4-ec2-az1b-pub-0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-034a2c42cfff5b830",
              "sg-0397f14125bf61ed9",
              "sg-0e3e2a1a3fb4aeb73"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.grupo4_sg_efs",
            "aws_security_group.grupo4_sg_remote",
            "aws_security_group.grupo4_sg_web",
            "aws_subnet.grupo4_subnet_az1b_pub",
            "aws_vpc.grupo4_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "grupo4_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:376339220136:internet-gateway/igw-06b126c79a3cc1853",
            "id": "igw-06b126c79a3cc1853",
            "owner_id": "376339220136",
            "tags": {
              "Name": "grupo4-igw"
            },
            "tags_all": {
              "Name": "grupo4-igw"
            },
            "vpc_id": "vpc-08d94031d8d28ee18"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.grupo4_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "grupo4_acl_pri",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:376339220136:network-acl/acl-056c0cf78b4ca89a3",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "10.1.0.0/27",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 998,
                "to_port": 0
              },
              {
                "action": "deny",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 999,
                "to_port": 0
              }
            ],
            "id": "acl-056c0cf78b4ca89a3",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "10.1.0.0/27",
                "from_port": 22,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 200,
                "to_port": 22
              },
              {
                "action": "allow",
                "cidr_block": "10.1.0.0/27",
                "from_port": 3333,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 120,
                "to_port": 3333
              },
              {
                "action": "allow",
                "cidr_block": "10.1.0.0/27",
                "from_port": 443,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "10.1.0.0/27",
                "from_port": 80,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 110,
                "to_port": 80
              },
              {
                "action": "deny",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 999,
                "to_port": 0
              }
            ],
            "owner_id": "376339220136",
            "subnet_ids": [
              "subnet-0ae1cb6fd8c6d98b4"
            ],
            "tags": {
              "Name": "grupo4-acl-pri"
            },
            "tags_all": {
              "Name": "grupo4-acl-pri"
            },
            "vpc_id": "vpc-08d94031d8d28ee18"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_subnet.grupo4_subnet_az1a_pri",
            "aws_vpc.grupo4_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "grupo4_acl_pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:376339220136:network-acl/acl-04ab2a528b76c0aa5",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 999,
                "to_port": 0
              }
            ],
            "id": "acl-04ab2a528b76c0aa5",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 22,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 200,
                "to_port": 22
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 3333,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 120,
                "to_port": 3333
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 110,
                "to_port": 80
              },
              {
                "action": "allow",
                "cidr_block": "10.1.0.0/27",
                "from_port": 2049,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 300,
                "to_port": 2049
              },
              {
                "action": "allow",
                "cidr_block": "10.1.0.32/28",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 998,
                "to_port": 0
              },
              {
                "action": "deny",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 999,
                "to_port": 0
              }
            ],
            "owner_id": "376339220136",
            "subnet_ids": [
              "subnet-0846b69b1d175ae65",
              "subnet-0afa529d816959abe"
            ],
            "tags": {
              "Name": "grupo4-acl-pub"
            },
            "tags_all": {
              "Name": "grupo4-acl-pub"
            },
            "vpc_id": "vpc-08d94031d8d28ee18"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_subnet.grupo4_subnet_az1a_pub",
            "aws_subnet.grupo4_subnet_az1b_pub",
            "aws_vpc.grupo4_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "grupo4_rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:376339220136:route-table/rtb-0f3209cb37d07f69a",
            "id": "rtb-0f3209cb37d07f69a",
            "owner_id": "376339220136",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06b126c79a3cc1853",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "grupo4-rtb"
            },
            "tags_all": {
              "Name": "grupo4-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-08d94031d8d28ee18"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.grupo4_igw",
            "aws_vpc.grupo4_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "grupo4_rtb_association_az1a_pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d4b562b5ffb10a10",
            "route_table_id": "rtb-0f3209cb37d07f69a",
            "subnet_id": "subnet-0846b69b1d175ae65"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.grupo4_igw",
            "aws_route_table.grupo4_rtb",
            "aws_subnet.grupo4_subnet_az1a_pub",
            "aws_vpc.grupo4_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "grupo4_sg_efs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:376339220136:security-group/sg-034a2c42cfff5b830",
            "description": "NFS:2049",
            "egress": [],
            "id": "sg-034a2c42cfff5b830",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.1.0.0/27"
                ],
                "description": "NFS:2049",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "grupo4_sg_efs",
            "name_prefix": "",
            "owner_id": "376339220136",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "grupo4-sg-efs"
            },
            "tags_all": {
              "Name": "grupo4-sg-efs"
            },
            "timeouts": null,
            "vpc_id": "vpc-08d94031d8d28ee18"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.grupo4_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "grupo4_sg_mysql",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:376339220136:security-group/sg-03723b006673f2d8a",
            "description": "MySQL:3306",
            "egress": [
              {
                "cidr_blocks": [
                  "10.1.0.32/28"
                ],
                "description": "ALL:-1",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03723b006673f2d8a",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.1.0.32/28"
                ],
                "description": "MySQL:3306",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "grupo4_sg_mysql",
            "name_prefix": "",
            "owner_id": "376339220136",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "grupo4-sg-mysql"
            },
            "tags_all": {
              "Name": "grupo4-sg-mysql"
            },
            "timeouts": null,
            "vpc_id": "vpc-08d94031d8d28ee18"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.grupo4_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "grupo4_sg_remote",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:376339220136:security-group/sg-0397f14125bf61ed9",
            "description": "SSH:22;RDP:3389",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ALL:-1",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0397f14125bf61ed9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "RDP:3389",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH:22",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "grupo4_sg_remote",
            "name_prefix": "",
            "owner_id": "376339220136",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "grupo4-sg-remote"
            },
            "tags_all": {
              "Name": "grupo4-sg-remote"
            },
            "timeouts": null,
            "vpc_id": "vpc-08d94031d8d28ee18"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.grupo4_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "grupo4_sg_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:376339220136:security-group/sg-0e3e2a1a3fb4aeb73",
            "description": "HTTPS:443;HTTP:80",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ALL:-1",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e3e2a1a3fb4aeb73",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP:80",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS:443",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "grupo4_sg_web",
            "name_prefix": "",
            "owner_id": "376339220136",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "grupo4-sg-web"
            },
            "tags_all": {
              "Name": "grupo4-sg-web"
            },
            "timeouts": null,
            "vpc_id": "vpc-08d94031d8d28ee18"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.grupo4_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "grupo4_subnet_az1a_pri",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:376339220136:subnet/subnet-0ae1cb6fd8c6d98b4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.1.0.32/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ae1cb6fd8c6d98b4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "376339220136",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "grupo4-subnet-az1a-pri"
            },
            "tags_all": {
              "Name": "grupo4-subnet-az1a-pri"
            },
            "vpc_id": "vpc-08d94031d8d28ee18"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.grupo4_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "grupo4_subnet_az1a_pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:376339220136:subnet/subnet-0846b69b1d175ae65",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.1.0.0/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0846b69b1d175ae65",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "376339220136",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "grupo4-subnet-az1a-pub"
            },
            "tags_all": {
              "Name": "grupo4-subnet-az1a-pub"
            },
            "vpc_id": "vpc-08d94031d8d28ee18"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.grupo4_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "grupo4_subnet_az1b_pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:376339220136:subnet/subnet-0afa529d816959abe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.1.0.16/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0afa529d816959abe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "376339220136",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "grupo4-subnet-az1b-pub"
            },
            "tags_all": {
              "Name": "grupo4-subnet-az1b-pub"
            },
            "vpc_id": "vpc-08d94031d8d28ee18"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.grupo4_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "grupo4_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:376339220136:vpc/vpc-08d94031d8d28ee18",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/26",
            "default_network_acl_id": "acl-0732f95b546ed480e",
            "default_route_table_id": "rtb-08b4ec82a9b289666",
            "default_security_group_id": "sg-0fb20da06d3a59773",
            "dhcp_options_id": "dopt-0ec70f4545950e624",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08d94031d8d28ee18",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08b4ec82a9b289666",
            "owner_id": "376339220136",
            "tags": {
              "Name": "grupo4-vpc"
            },
            "tags_all": {
              "Name": "grupo4-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}